# clockwise-paradise

./: .env.example  .gitignore  .gitmodules  BRANCH_PROTECTION.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CMakeLists.txt  CONSTRAINTS.md  MIXED_SURFACE_OWNERSHIP.md  Makefile  README.md  REVIEWER_ENFORCEMENT.md  partitions.csv  sdkconfig.defaults
.audit/: backlog-planning-2026-04-17.md
.claude/agents/: coder.md  connectivity.md  display-render.md  firmware-rtos.md  frontend.md  github-specialist.md  pm.md  reviewer-firmware.md  reviewer-frontend.md  reviewer.md  widget-author.md
.claude/prompts/: add-setting.md  debug-display.md
.claude/skills/: boot-diagnose.md  build.md  coding-guidelines.md  diagnose.md  esp32-freertos.md  flash.md  frontend-design.md  git-go-for-pr.md  git-go-for-release.md  git-merge-pr.md  hub75-rendering.md  mqtt-ha-discovery.md  skill-architect.md  task-contract.md  test-hw.md  test.md  widget-contract.md
.cppcheck/: suppressions.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/skills/coding-guidelines/: SKILL.md
.github/workflows/: build.yml  esp-idf.yml  release-please.yml  release.yml  test-native.yml
ADR/: 0001-agentic-architecture.md  0002-single-loop-concurrency.md  README.md
firmware/: platformio.ini
firmware/lib/cw-commons/: CMakeLists.txt  CWClockfaceDispatcher.h  CWClockfaceDriver.cpp  CWClockfaceDriver.h  CWDateTime.cpp  CWDateTime.h  CWHttpClient.h  CWMqtt.h  CWOTA.h  CWPreferences.h  CWWebServer-Config.h  CWWebServer-Core.h  CWWebServer-Device.h  CWWebServer-HTTP.h  CWWebServer-OTA.h  CWWebServer-Router.h  CWWebServer-Settings.h  CWWebServer.h  CWWebUI.h  CWWidgetManager.h  IClockface.h  README.md  SettingsWebPage.h  WiFiController.h
firmware/lib/cw-commons/connectivity/: CWHttpClient.h  CWMqtt.h  CWMqttCommands.h  CWMqttDiscovery.h  CWOTA.h  WiFiController.h
firmware/lib/cw-commons/core/: CWDateTime.cpp  CWDateTime.h  CWPreferences.h
firmware/lib/cw-commons/display/: StatusController.h
firmware/lib/cw-commons/pages/: ClockPage.h  (+5 more)
firmware/lib/cw-gfx-engine/: ColorUtil.h
firmware/lib/cw-logic/: CMakeLists.txt  library.json
firmware/src/: CWClockfaceRegistry.cpp  main.cpp
firmware/test/test_embedded/: CWPreferences.cpp
firmware/test/test_native/: CMakeLists.txt  SimpleTests.cpp
firmware/test/test_unit/: SimpleTests.cpp
main/: CMakeLists.txt  CWClockfaceRegistry.cpp  Kconfig.projbuild
scripts/: flash.py  pre-commit  test_hw.py
tests/: README.md
tests/e2e/: webui.spec.ts
(+22 files in other folders)
